suppress spell errors